feat: construct block demo add: physics test