@@ -1,6 +1,5 @@
 package bbbwd.bubbleworld.input;
 
-import bbbwd.bubbleworld.Utils;
 import bbbwd.bubbleworld.Vars;
 import bbbwd.bubbleworld.content.blocks.Block;
 import bbbwd.bubbleworld.content.blocks.ComposedBlock;
@@ -8,21 +7,22 @@ import bbbwd.bubbleworld.game.components.BoxCM;
 import bbbwd.bubbleworld.game.components.ComposedCM;
 import bbbwd.bubbleworld.game.components.TransformCM;
 import bbbwd.bubbleworld.game.systems.PhysicsSystem;
+import bbbwd.bubbleworld.utils.Utils;
 import com.badlogic.gdx.InputProcessor;
 import com.badlogic.gdx.box2d.Box2dPlus;
 import com.badlogic.gdx.box2d.structs.b2Transform;
 import com.badlogic.gdx.box2d.structs.b2WorldId;
 import com.badlogic.gdx.jnigen.runtime.closure.ClosureObject;
 import com.badlogic.gdx.math.Affine2;
-import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.math.Vector2;
+import com.badlogic.gdx.utils.Disposable;
 
 import java.util.ArrayList;
+import java.util.function.Function;
+import java.util.logging.Logger;
 
-public abstract class InputHandler implements InputProcessor {
+public abstract class InputHandler implements InputProcessor, Disposable {
 
-    public abstract void update();
-    public abstract void drawUI();
     /**
      * @param position world position
      * @param newBlock the block to be built
@@ -30,14 +30,13 @@ public abstract class InputHandler implements InputProcessor {
      * @return null if no place to build
      */
 
-    public static seekResult seekPlaceForBuild(Vector2 position, Block newBlock, int rot) {
+    public static SeekResult seekPlaceForBuild(Vector2 position, Block newBlock, int rot) {
         b2WorldId worldId = Vars.ecs.getSystem(PhysicsSystem.class).getWorldId();
 //        Viewport viewport = Vars.renderer.viewport;
 
 //        Vector2 world_touch = viewport.unproject(new Vector2(position));
-        ArrayList<candidate> nearBy = new ArrayList<>(10);
-        float thisSize = newBlock.size;
-        float extend = thisSize * 2 * 1.5f;
+        ArrayList<Connection> nearBy = new ArrayList<>(10);
+        float extend = newBlock.size * 2 * 1.5f;
 
 
         //seek possible
@@ -47,6 +46,8 @@ public abstract class InputHandler implements InputProcessor {
             @Override
             public boolean b2OverlapResultFcn_call(long entity) {
                 int entityId = (int) entity;
+
+                Logger.getGlobal().info("check entity: "+entityId);
                 TransformCM transformCM = Vars.ecs.getMapper(TransformCM.class).get(entityId);
                 Affine2 inv = new Affine2(transformCM.transform).inv();
                 Vector2 local = new Vector2(position);
@@ -58,37 +59,43 @@ public abstract class InputHandler implements InputProcessor {
                 float min = Float.MAX_VALUE;
                 Vector2 localGridPos = new Vector2();
 
-                float edge = boxCM.size + thisSize;
-                for (float lx = -edge; lx <= edge; lx += Vars.GRID_SIZE*2) {
-                    for (float ly = -edge; ly <= edge; ly += Vars.GRID_SIZE*2) {
+                float edge = boxCM.size + newBlock.size;
+                for (float lx = -edge; lx <= edge; lx += Vars.GRID_SIZE * 2) {
+                    for (float ly = -edge; ly <= edge; ly += Vars.GRID_SIZE * 2) {
                         if (Math.abs(lx) == edge && Math.abs(ly) == edge)
                             continue;
                         if (lx > -edge && lx < edge && ly > -edge && ly < edge)
                             continue;
                         float cur = (lx - local.x) * (lx - local.x) + (ly - local.y) * (ly - local.y);
-                        if (boxCM.connectFilter.filter(newBlock, lx, ly)) continue;
+                        if (boxCM.connectFilter.filtOut(newBlock, lx, ly)) continue;
                         if (cur >= min) continue;
                         final boolean[] ok = {true};
                         Affine2 tmp = new Affine2(transformCM.transform).translate(lx, ly);
-                        Box2dPlus.b2WorldOverlapSquare(worldId, thisSize * 0.95f, tmp, ClosureObject.fromClosure(new Box2dPlus.EntityCallback() {
-                            @Override
-                            public boolean b2OverlapResultFcn_call(long entity) {
-                                ok[0] = false;
-                                return false;
-                            }
+                        Box2dPlus.b2WorldOverlapSquare(worldId, newBlock.size * 0.95f, tmp, ClosureObject.fromClosure(entity1 -> {
+                            ok[0] = false;
+                            return false;
                         }));
-//                        Vars.logger.info("lx: " + lx + " ly: " + ly + " cur: "+cur);
-                        if (!ok[0]) continue;
+                        if (!ok[0]) {
+                            Logger.getGlobal().info("overlap test failed at: "+lx+','+ly);
+                            continue;
+                        }
+
                         localGridPos.set(lx, ly);
                         tfm = tmp;
                         min = cur;
+                        Logger.getGlobal().info("renewed best: "+lx+','+ly);
                     }
                 }
 
                 if (min == Float.MAX_VALUE) return true;
-
-
-                nearBy.add(new candidate(min, entityId, boxCM.size, new Vector2(transformCM.transform.m02, transformCM.transform.m12), tfm, localGridPos, new Vector2(), new Vector2(), new float[1]));
+                Connection connection = new Connection();
+                connection.prefer = min;
+                connection.oldBoxEntity = entityId;
+                connection.size = boxCM.size;
+                connection.oldBlockTfm=transformCM.transform;
+                connection.newPosRelativeToOld.set(localGridPos);
+                connection.newBlockTfm.set(tfm);
+                nearBy.add(connection);
                 return true;
             }
         }));
@@ -99,51 +106,69 @@ public abstract class InputHandler implements InputProcessor {
 
         //determine the best candidate and compute other connections
         nearBy.sort((o1, o2) -> Float.compare(o1.prefer, o2.prefer));
-        candidate first = nearBy.get(0);
-        Affine2 transform = new Affine2(first.tfm);
+        Connection first = nearBy.getFirst();
+        Affine2 transform = new Affine2(first.newBlockTfm);
         for (int i = 0; i < rot % 4; i++) {
             Utils.rotateHalfPi(transform);
         }
+
         Affine2 inv = transform.inv();
-        Vector2 newBlockPos = new Vector2(first.tfm.m02, first.tfm.m12);
-        ArrayList<candidate> connections = new ArrayList<>(9);
-        for (candidate candidate : nearBy) {
-            if (newBlockPos.dst2(candidate.tfm.m02, candidate.tfm.m12) > Vars.GRID_SIZE * Vars.GRID_SIZE)
+        Vector2 newBlockPos = new Vector2(first.newBlockTfm.m02, first.newBlockTfm.m12);
+        ArrayList<Connection> connections = new ArrayList<>(9);
+        for (Connection connection : nearBy) {
+            if (newBlockPos.dst2(connection.newBlockTfm.m02, connection.newBlockTfm.m12) > Vars.GRID_SIZE * Vars.GRID_SIZE)
                 continue;
-            Vector2 relative = new Vector2(candidate.pos);
-            inv.applyTo(relative);
-            Utils.Gridize(relative, newBlock.size + candidate.size);
-            if (newBlock.connectFilter.filter(newBlock, relative.x, relative.y)) continue;
+            Vector2 oldRelativeToNew = new Vector2(connection.oldBlockTfm.m02,connection.oldBlockTfm.m12);
+            inv.applyTo(oldRelativeToNew);
+
+            Utils.Gridize(oldRelativeToNew, newBlock.size + connection.size);
+            if (newBlock instanceof ComposedBlock composedBlock) {
+                boolean a = composedBlock.A.connectFilter.filtOut(newBlock, oldRelativeToNew.x, oldRelativeToNew.y);
+                boolean b = composedBlock.B.connectFilter.filtOut(newBlock, oldRelativeToNew.x, oldRelativeToNew.y);
+                if (a && b) continue;
+                if (a)
+                    connection.newBoxEntityMapper = ((id) -> {
+                        return
+                            Vars.ecs.getMapper(ComposedCM.class).get(id).childB;
+                    });
+                else if (b)
+                    connection.newBoxEntityMapper = ((id) -> {
+                        return
+                            Vars.ecs.getMapper(ComposedCM.class).get(id).childA;
+                    });
+
+            } else {
+                if (newBlock.connectFilter.filtOut(newBlock, oldRelativeToNew.x, oldRelativeToNew.y)) continue;
+                connection.newBoxEntityMapper = (id -> id);
+            }
+
             //compute the anchor and angle
-            if (Math.abs(relative.x) > Math.abs(relative.y)) {
-                candidate.anchorNewBlock.set(Math.copySign(newBlock.size, relative.x), relative.y);
+
+            //scaled
+            oldRelativeToNew.scl(newBlock.size/(connection.size+newBlock.size));
+            if (Math.abs(oldRelativeToNew.x) > Math.abs(oldRelativeToNew.y)) {
+                connection.anchorNewBlock.set(Math.copySign(newBlock.size, oldRelativeToNew.x), oldRelativeToNew.y);
             } else {
-                candidate.anchorNewBlock.set(relative.x, Math.copySign(newBlock.size, relative.y));
-            }
-            Utils.Gridize(candidate.relative, newBlock.size + candidate.size);
-            if (Math.abs(candidate.relative.x) > Math.abs(candidate.relative.y)) {
-                candidate.anchorOldBlock.set(Math.copySign(candidate.size, candidate.relative.x), candidate.relative.y);
-            } else {
-                candidate.anchorOldBlock.set(candidate.relative.x, Math.copySign(candidate.size, candidate.relative.y));
+                connection.anchorNewBlock.set(oldRelativeToNew.x, Math.copySign(newBlock.size, oldRelativeToNew.y));
             }
 
-            candidate.relativeAngle[0] = new Vector2(candidate.relative).sub(candidate.anchorOldBlock).angleDeg(candidate.anchorOldBlock)* MathUtils.degreesToRadians;
+            Utils.Gridize(connection.newPosRelativeToOld, newBlock.size + connection.size);
+            //scaled
+            connection.newPosRelativeToOld.scl(connection.size/(connection.size+newBlock.size));
+            if (Math.abs(connection.newPosRelativeToOld.x) > Math.abs(connection.newPosRelativeToOld.y)) {
+                connection.anchorOldBlock.set(Math.copySign(connection.size, connection.newPosRelativeToOld.x), connection.newPosRelativeToOld.y);
+            } else {
+                connection.anchorOldBlock.set(connection.newPosRelativeToOld.x, Math.copySign(connection.size, connection.newPosRelativeToOld.y));
+            }
 
-            connections.add(candidate);
+//            connection.relativeAngle=Utils.computeRotReference(connection.oldBlockTfm,first.newBlockTfm);
+            connection.relativeAngle = 0;
+
+            connections.add(connection);
         }
         if (connections.isEmpty()) return null;//in case of cannot connect to its host
-        return new seekResult(first.tfm, connections);
+        return new SeekResult(first.newBlockTfm,newBlock, connections);
 
-    }
-
-    public abstract void resize(int width, int height);
-
-
-    public record seekResult(Affine2 transform, ArrayList<candidate> connections) {
-    }
-
-    public record candidate(float prefer, int entity, float size, Vector2 pos, Affine2 tfm, Vector2 relative,
-                            Vector2 anchorNewBlock, Vector2 anchorOldBlock, float[] relativeAngle) {
     }
 
     public static int buildBlock(Affine2 transform, Block newBlock) {
@@ -152,12 +177,65 @@ public abstract class InputHandler implements InputProcessor {
         if (newBlock instanceof ComposedBlock composedBlock) {
             int childA = Vars.ecs.getMapper(ComposedCM.class).get(entity).childA;
             int childB = Vars.ecs.getMapper(ComposedCM.class).get(entity).childB;
-            Vars.ecs.getSystem(PhysicsSystem.class).createBox(childA) ;
+            Vars.ecs.getSystem(PhysicsSystem.class).createBox(childA);
             Vars.ecs.getSystem(PhysicsSystem.class).createBox(childB);
             composedBlock.compose(childA, childB);
         } else {
             Vars.ecs.getSystem(PhysicsSystem.class).createBox(entity);
         }
         return entity;
+    }
+
+    public static void buildAndConnect(SeekResult seekResult) {
+        int id = InputHandler.buildBlock(seekResult.transform(), seekResult.type());
+        for (Connection connection : seekResult.connections()) {
+
+            Vars.ecs.getSystem(PhysicsSystem.class)
+                .connect(connection.newBoxEntityMapper.apply(id), connection.oldBoxEntity,
+                connection.anchorNewBlock, connection.anchorOldBlock,
+                connection.relativeAngle);
+            Logger.getGlobal().info(connection.toString());
+            break;
+
+        }
+    }
+
+    public abstract void update();
+
+    public abstract void drawUI();
+
+    public abstract void resize(int width, int height);
+
+    public record SeekResult(Affine2 transform,Block type, ArrayList<Connection> connections) {
+    }
+
+    public static final class Connection {
+        float prefer;
+        //to solve composed block connection
+        Function<Integer, Integer> newBoxEntityMapper;
+        int oldBoxEntity;
+        float size;
+        Affine2 oldBlockTfm = new Affine2();
+        Affine2 newBlockTfm = new Affine2();
+        Vector2 newPosRelativeToOld = new Vector2();
+        public Vector2 anchorNewBlock = new Vector2();
+        public Vector2 anchorOldBlock = new Vector2();
+        public float relativeAngle;
+
+        @Override
+        public String toString() {
+            return "Connection{" +
+                "prefer=" + prefer +
+                ", newBoxEntityMapper=" + newBoxEntityMapper +
+                ", oldBoxEntity=" + oldBoxEntity +
+                ", size=" + size +
+                ", oldBlockTfm=" + oldBlockTfm +
+                ", newBlockTfm=" + newBlockTfm +
+                ", relative=" + newPosRelativeToOld +
+                ", anchorNewBlock=" + anchorNewBlock +
+                ", anchorOldBlock=" + anchorOldBlock +
+                ", relativeAngle=" + relativeAngle +
+                '}';
+        }
     }
 }
